# walmart_forecasting

./: DataSet.csv  example.ipynb  guardar.ipynb  maximal_covering_location.py  optimization.ipynb  pyproject.toml  requirements.txt  serie_de_tiempo.ipynb  summit.csv  summit2.csv  walmart_cluster.ipynb  walmart_main copy.ipynb  walmart_main.ipynb  walmart_main_ copy 2.ipynb  walmart_main_.ipynb  walmart_main_global.ipynb  walmart_visualization.ipynb
2023/finally-datascience/finally-datascience/: 01-data-transformation.ipynb  01-generate-dataset.ipynb  bike_data.ipynb  bikes.ipynb  conf_day_hour.ipynb  configuration_days_hours.csv  diego.ipynb  distribucion_prediccion_hora.xlsx  fork-of-01-introducing (1).ipynb  new_app.ipynb  prediction_lgbm.csv  prediction_quantile.csv
2023/finally-datascience/finally-datascience/.ipynb_checkpoints/: 01-generate-dataset-checkpoint.ipynb  fork-of-01-introducing (1)-checkpoint.ipynb
2023/finally-datascience/finally-datascience/data/: train.csv
2023/finally-datascience/finally-datascience/data_bike/: historical.csv  test.csv  train.csv
2023/finally-datascience/finally-datascience/generated_data/: test.csv  train.csv
2023/finally-datascience/finally-datascience/generated_data_bike/: test.csv  train.csv  y_train_se.csv
feature_engineering/: autoregressive_features.py  temporal_features.py
forecasting/: ensembling.py  ml_forecasting.py
utils/: data_utils.py  ts_utils.py
walmart_utils/: download.py  exploratory_analysis.py  feature_engineering.py  merge_data.py  models.py  pipeline.py  training.py
