[tool.poetry]
name = "serie-de-tiempo"
version = "0.1.0"
description = ""
authors = ["Walter Alvarado <walvdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
statsmodels = "^0.14.3"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
prophet = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
